# openpifpaf

./: .buildinfo  .clabot  .gitattributes  .gitignore  .pylintrc  .pyre_configuration  .travis.yml  CLAC.txt  CONTRIBUTING.md  Check_targets_script.ipynb  EVAL_pose.ipynb  HISTORY.md  LICENSE  LICENSE.save  MANIFEST.in  README.md  README.rst  ROC_ball.ipynb  ball_metrics.py  bibliography.html  citation.bib  cli_help.html  datasets.html  dev.html  examples.html  faq.html  genindex.html  intro.html  models.html  moduledocs.html  oks.py  oks.sh  performance.html  plugins_cifar10.html  plugins_crowdpose.html  plugins_overview.html  predict_api.html  predict_cli.html  py-modindex.html  pyproject.toml  (+13 more)
.binder/: requirements.txt
.github/: stale.yml
.github/workflows/: aws.yml  deploy-guide-dev.yml  deploy-guide.yml  pypi-deploy.yml  pythonapp.yml  tests.yml  update-latest.yml  update-stable.yml
_sources/: bibliography.md  datasets.ipynb  dev.ipynb  predict_api.ipynb  tutorial_opencv.ipynb
_static/: mystyle.css  sphinx-book-theme.37f24b989f4638ff9c27c22dc7559d4f.css
cpp/: CMakeLists.txt  README.md  cli_video.cpp  module.cpp
cpp/examples/cifcafdecoder/: CMakeLists.txt  image_based.hpp  main.cpp  math_helpers.cpp  object_detection.hpp  occupancy.cpp  occupancy.hpp  openpifpaf_postprocessor.cpp  openpifpaf_postprocessor.hpp  readme.md  sample_data_0_8.cpp  sample_data_0_8.hpp
cpp/examples/cifcafdecoder_v0.12.13_wholebody/: CMakeLists.txt
cpp/examples/cifcafdecoder_v0.12.13_wholebody/include/data_structures/: blobnd.hpp
cpp/examples/cifcafdecoder_v0.12.13_wholebody/include/decoder/: annotation.hpp  caf_scored.hpp  cif_caf.hpp  cif_hr.hpp  cif_seeds.hpp  field_config.hpp  functional.hpp  nms.hpp  occupancy.hpp  openpifpaf_postprocessor.hpp
cpp/examples/cifcafdecoder_v0.12.13_wholebody/include/utils/: numpy_utils.hpp  vector_utils.hpp
cpp/examples/cifcafdecoder_v0.12.13_wholebody/src/decoder/: annotation.cpp  caf_scored.cpp  cif_caf.cpp  cif_hr.cpp  cif_seeds.cpp  functional.cpp  nms.cpp  occupancy.cpp  openpifpaf_postprocessor.cpp
cpp/examples/cifcafdecoder_v0.12.13_wholebody/src/utils/: numpy_utils.cpp  vector_utils.cpp
cpp/examples/cifcafdecoder_v0.12.13_wholebody/test/: main.cpp
cpp/include/: openpifpaf.hpp
cpp/include/openpifpaf/: utils.hpp
cpp/include/openpifpaf/decoder/: cifcaf.hpp
cpp/include/openpifpaf/decoder/utils/: caf_scored.hpp  cif_hr.hpp  cif_seeds.hpp  nms.hpp  occupancy.hpp
cpp/src/: caf_scored.cpp  cif_hr.cpp  cif_seeds.cpp  cifcaf.cpp  module.cpp  nms.cpp  occupancy.cpp
dev/: .buildinfo  bibliography.html  cli_help.html  datasets.html  dev.html  examples.html  faq.html  genindex.html  intro.html  models.html  moduledocs.html  objects.inv  performance.html  plugins_cifar10.html  plugins_crowdpose.html  plugins_overview.html  predict_api.html  predict_cli.html  py-modindex.html  readme.html  search.html  searchindex.js  train.html  tutorial_opencv.html
dev/_sources/: examples.ipynb  faq.ipynb  intro.md  moduledocs.ipynb  plugins_crowdpose.ipynb  plugins_overview.ipynb  predict_cli.ipynb  train.ipynb
docs/: CLAI.txt  CONTRIBUTING.md  HISTORY.md  cli-help-benchmark.txt  cli-help-count_ops.txt  cli-help-eval_coco.txt  cli-help-export_onnx.txt  cli-help-logs.txt  cli-help-migrate.txt  cli-help-predict.txt  cli-help-train.txt  cli-help-video.txt  cli-help-webcam.txt  datasets.md  eval_logs.md  performance.md  predict.ipynb  scale_distribution.ipynb  studies.ipynb
docs/coco/: 000000081988.jpg.predictions.json
guide/: _config.yml  _config_dev.yml  _toc.yml  artwork.py  cli_help.ipynb  compute.ipynb  datasets.ipynb  datasets.md  dev.ipynb  download_data.py  examples.ipynb  faq.ipynb  intro.md  models.ipynb  moduledocs.ipynb  nb_cell_tags.py  performance.ipynb  plugin_apollocar3D.ipynb  plugins_animalpose.ipynb  plugins_apollocar3d.ipynb  plugins_cifar10.ipynb  plugins_crowdpose.ipynb  plugins_custom.ipynb  plugins_extras.ipynb  plugins_nuscenes.ipynb  plugins_overview.ipynb  plugins_wholebody.ipynb  predict_api.ipynb  predict_cli.ipynb  profile.ipynb  readme.md  references.bib  requirements.txt  train.ipynb  tutorial_opencv.ipynb
guide/_static/: mystyle.css
openpifpaf/: __init__.py  _version.py  add_pyramid.py  annotation.py  benchmark.py  calibrate_field_confidence.py  coco_stats.py  configurable.py  conftest.py  consts.py  count_ops.py  cpp_extension.py  data.py  data_module.py  datasets.py  eval.py  eval_coco.py  eval_coco_abolfazl.py  eval_oks_pq.py  eval_test.py  export_coreml.py  export_libtorch.py  export_onnx.py  export_torchscript.py  functional.c  functional.pyx  headmeta.py  logger.py  logs.py  migrate.py  oks_abolfazl.py  optimize.py  plugin.py  plugins.py  predict.py  predict_pan.py  predictor.py  profiler.py  show.py  signal.py  (+8 more)
openpifpaf/contrib/: __init__.py
openpifpaf/csrc/: CMakeLists.txt  README.md  cli_image.cpp  cli_video.cpp  main.cpp
openpifpaf/csrc/include/: openpifpaf.hpp
openpifpaf/csrc/include/openpifpaf/: utils.hpp
openpifpaf/csrc/include/openpifpaf/decoder/: cifcaf.hpp  cifdet.hpp
openpifpaf/csrc/include/openpifpaf/decoder/utils/: caf_scored.hpp  cif_hr.hpp  cif_seeds.hpp  nms.hpp  nms_detection.hpp  nms_detections.hpp  nms_keypoints.hpp  occupancy.hpp
openpifpaf/csrc/src/: caf_scored.cpp  cif_hr.cpp  cif_seeds.cpp  cifcaf.cpp  cifdet.cpp  module.cpp  nms.cpp  nms_detection.cpp  nms_detections.cpp  nms_keypoints.cpp  occupancy.cpp  utils.cpp
openpifpaf/datasets/: __init__.py  build_deepsport_ball_dataset.py  cifar10.py  coco.py  coco_mrcnn.ipynb  cocodet.py  cocokp.py  collate.py  constants.py  deepsport.py  eurocity.py  factory.py  headmeta.py  headmeta_factory.py  image_list.py  keemotion.py  (+10 more)
tests/: test_clis.py  test_cmake.py  test_coreml_export.py  test_cpp_extension.py  test_decoder_pifpaf.py  test_forward.py  test_geometric_median.py  test_help.py  test_image_scale.py  test_input_processing.py  test_localization.py  test_multiprocessing.py  test_network.py  test_onnx_export.py  test_plugin.py  test_scale_loss.py  test_torchscript.py  test_train.py  test_transforms.py  test_weighted_cif.py
(+344 files in other folders)
