[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "torch==1.9.0",
    "wheel",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--nbval-lax --current-env --doctest-modules"
testpaths = ["tests", "src/openpifpaf"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[tool.pylint.BASIC]
variable-rgx = "[a-z0-9_]{1,30}$"
good-names = ["ap", "AP", "APM", "APL", "ar", "ax", "ax_2D", "ax_3D", "b", "d", "f", "g", "gt", "h", "i", "im", "lr", "n", "p", "plt", "r", "s", "t", "t1", "t2", "th", "v", "vs", "w", "wh", "x", "x1", "x2", "xs", "y", "ys", "xy"]
class-const-naming-style = "snake_case"  # checked since pylint 2.7.3 TODO remove?

[tool.pylint.IMPORTS]
allow-any-import-level = ["pycocotools", "pycocotools.coco"]

[tool.pylint.SIMILARITIES]
min-similarity-lines = 15  # Minimum lines number of a similarity.
ignore-comments = "yes"  # Ignore comments when computing similarities.
ignore-docstrings = "yes"  # Ignore docstrings when computing similarities.
ignore-imports = "yes"  # Ignore imports when computing similarities.

[tool.pylint.TYPECHECK]
generated-members = ["numpy.*", "torch.*", "cv2.*"]
ignored-modules = ["pycocotools"]
disable = [
    "consider-iterating-dictionary",
    "consider-using-dict-items",
    "missing-docstring",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-few-public-methods",
    "unsubscriptable-object",
    "duplicate-code",  # similarity check unworkable with plugins
]
