[options]
setup_requires =
    numpy
    cython

[tool:pytest]
norecursedirs = checkpoints data-mscoco demo dist docs outputs .git .eggs

[versioneer]
VCS = git
style = pep440
versionfile_source = openpifpaf/_version.py
# versionfile_build = openpifpaf/_version.py
tag_prefix = v
#parentdir_prefix =
